package com.kinandcarta.create.proxytoggle.manager.view.screen

internal object TestTags {
    const val PROXY_TOGGLE_BUTTON = "PROXY_TOGGLE_BUTTON"
    const val PAST_PROXIES_DROPDOWN_BUTTON = "PAST_PROXIES_DROPDOWN_BUTTON"
}
